GSR-4569 CI for 11.x (#104)
* Update Jenkinsfile

* Fixed validation issues